# auto_wiki_base

./: .gitignore  CLAUDE.md  README.md  close_linking_debt.py  design doc.MD  pyproject.toml  requirements.txt  run_replication.sh  subagent_env_setup.sh.template  wiki.MD
.claude/skills/wiki/: SKILL.md
raw/sources/: arrow_riscv_vector_ml_inference.md  fpga_riscv_isa_extensions_nn.md  riscv_ai_native_platform.md  sifive_intelligence_x280_2ndgen.md  tenstorrent_blackhole_riscv.md
tools/: audit.py  backfill_identity.py  bootstrap_outbound_links.py  context_selector.py  domain_analysis.py  eval_summary.py  frontmatter.py  graph_stats.py  graph_topology.py  identity.py  injection_history.py  orchestrator.py  qmd_runner.py  quota.py  relationship_links.py  repair_frontmatter.py  research_state.py  retrieval_benchmark.py  subagent_prompts.py  validate_output.py  web_fetch.py
tools/tests/: test_context_selector.py  test_domain_analysis.py  test_frontmatter.py  test_graph_stats.py  test_graph_topology.py  test_harness.py  test_identity_first.py  test_injection_history.py  test_layer1.py  test_layer3.py  test_qmd_runner.py  test_relationship_links.py  test_research_qmd_resume.py  test_retrieval_benchmark.py  test_source_citation.py  test_web_fetch.py
tools/tests/fixtures/: fail_dangling.md  fail_wordcount.md  pass_entity.md  retrieval_benchmark_queries.json
wiki/: index.md  lint_report_2026-06-29.md  log.md  patch_queue.md  retrospective_lint_report.md
wiki/_pages/ai_accelerator_architecture/: amd_matrix_cores.md  google_ironwood_tpu.md
wiki/_pages/entity/: Gemmini.md  (+471 more)
(+342 files in other folders)
