[project]
name = "auto-wiki-base"
version = "0.1.0"
description = "LLM-maintained wiki with auto-ingest, evaluation, and research harness"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "spacy>=3.7",
    "click>=8.0",
    "anthropic>=0.30",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
